syntax = "proto3";

import 'files/common/common.proto';

message RecipeIngredientSets {
  repeated RecipeIngredientSet recipe_ingredient_sets = 1;

  message RecipeIngredientSet {
    ObjectIdentity identity = 1;
    RecipeIngredientSetInfo info = 2;
  }

  message RecipeIngredientSetInfo {
    RecipeIngredients ingredients = 1;
    RecipeRewards rewards = 2;
  }

  message RecipeIngredients { repeated RecipeIngredient ingredients = 1; }

  message RecipeIngredient {
    ObjectIdentity identity = 1;
    string type = 2;
    int32 quantity = 5;
  }

  message RecipeRewards {}
}
